RESOLVED FIXED176260
REGRESSION (r219145): Toggling layer borders on a static document no longer works immediately
https://bugs.webkit.org/show_bug.cgi?id=176260
Summary REGRESSION (r219145): Toggling layer borders on a static document no longer w...
Simon Fraser (smfr)
Reported 2017-09-01 17:39:42 PDT
After r219145, toggling compositing layer borders, either via the Debug menu, or via the button in Web Inspector, no longer immediately hides or shows the layer borders. You have to reload the page, or trigger some other style recalc for the change to take effect.
Attachments
patch (1.45 KB, patch)
2018-01-08 05:40 PST, Antti Koivisto
no flags
patch (4.48 KB, patch)
2018-01-08 06:49 PST, Antti Koivisto
no flags
patch (6.17 KB, patch)
2018-01-08 10:01 PST, Antti Koivisto
no flags
Radar WebKit Bug Importer
Comment 1 2017-09-01 17:40:08 PDT
Antti Koivisto
Comment 2 2018-01-08 05:40:02 PST
Antti Koivisto
Comment 3 2018-01-08 06:49:58 PST
Simon Fraser (smfr)
Comment 4 2018-01-08 08:28:33 PST
Comment on attachment 330696 [details] patch I don't know if this i the right fix, and why it works. Layer borders are not painted; they are mapped to CA borders. And for layers with no backing store, setNeedsDisplay() is a no-op.
Simon Fraser (smfr)
Comment 5 2018-01-08 08:29:28 PST
Comment on attachment 330701 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=330701&action=review > Source/WebCore/rendering/RenderLayerCompositor.cpp:325 > + m_layerNeedsCompositingUpdate = true; Maybe we only need this part?
Antti Koivisto
Comment 6 2018-01-08 09:30:44 PST
(In reply to Simon Fraser (smfr) from comment #5) > Comment on attachment 330701 [details] > patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=330701&action=review > > > Source/WebCore/rendering/RenderLayerCompositor.cpp:325 > > + m_layerNeedsCompositingUpdate = true; > > Maybe we only need this part? That's what I thought too but it doesn't work in MiniBrowser without also forcing paint. It is not clear to me what is supposed to make us paint.
Antti Koivisto
Comment 7 2018-01-08 09:31:51 PST
Safari and layout test are fine without the forced paint so I can land just that too.
Antti Koivisto
Comment 8 2018-01-08 09:43:00 PST
Actually Safari also needs forced paint to get repaint indicator right. Unlike borders that seems to be painted on top of the layer content.
Antti Koivisto
Comment 9 2018-01-08 10:01:05 PST
Antti Koivisto
Comment 10 2018-01-08 10:02:13 PST
Limited the repaint to the main layer that shows the counter.
WebKit Commit Bot
Comment 11 2018-01-08 10:47:30 PST
Comment on attachment 330710 [details] patch Clearing flags on attachment: 330710 Committed r226521: <https://trac.webkit.org/changeset/226521>
WebKit Commit Bot
Comment 12 2018-01-08 10:47:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.