REGRESSION (r219145): Toggling layer borders on a static document no longer works immediately https://bugs.webkit.org/show_bug.cgi?id=176260 <rdar://problem/34219966>

Reviewed by Simon Fraser.

Source/WebCore:

Optimization reveled bugs in debug indicator painting.

Test: compositing/debug-borders-dynamic.html

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::commitLayerChangesBeforeSublayers):
(WebCore::GraphicsLayerCA::updateDebugIndicators):
(WebCore::GraphicsLayerCA::updateDebugBorder): Deleted.

- Rename to indicate this is not just about debug borders.
- Trigger display so repaint counters get painted. This helper is only called when the indicators change.

* platform/graphics/ca/GraphicsLayerCA.h:
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::cacheAcceleratedCompositingFlags):

Ensure we do compositing update on debug border change even when there is no layout.

LayoutTests:

* compositing/debug-borders-dynamic-expected.html: Added.
* compositing/debug-borders-dynamic.html: Added.


Canonical link: https://commits.webkit.org/197234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226521 268f45cc-cd09-0410-ab3c-d52691b4dbfc